using System.Drawing;

namespace Consort.Document {

    public class Font {

        public Bitmap Texture;
        public string Name { get; }
        public Size Size { get; }
        public double AspectRatio { get; }

    }

}
