using System.Collections.Generic;
using System.Drawing;

namespace Consort.Document {

    public class FontFamily {

        public List<Font> Fonts;
        public List<Size> Sizes;
        public string Name { get; }
        public double AspectRatio { get; }

    }

}
