using System.Collections.Generic;
using System.Drawing;

namespace Consort.Document {

    public class Palette {

        public Size Size { get; set; }
        public List<Color> Colors { get; set; }

    }

}
